--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 = reciter
 
+{<img src="https://secure.travis-ci.org/rodrigomanhaes/reciter.png"/>}[http://travis-ci.org/rodrigomanhaes/reciter]
+
 Parses number sequences in the form:
 
     p.parse('1-3;5;9-11')
