--- a/README.rdoc
+++ b/README.rdoc
@@ -30,6 +30,11 @@ An alternative text can be provided for replacing "to":
     p.unparse(1, 2, 3)     # "1 a 3"
 
 
+It's possible unparsing to "mechanical" form:
+
+    p.unparse(:mechanic, 1, 2, 3, 5, 9, 10, 11) # 1-3;5;9-11
+
+
 == How to install
 
 Just run:
